--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@tsconfig/svelte": "^5.0.2",
 		"svelte": "^4.2.7",
-		"svelte-check": "^3.6.0",
-		"typescript": "^5.0.0",
+		"svelte-check": "^3.6.3",
+		"svelte-preprocess": "^5.1.3",
+		"typescript": "^5.3.3",
 		"vite": "^5.0.3"
 	},
 	"type": "module"
