--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tsconfig/svelte": "^5.0.2",
+		"prisma": "^5.9.1",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.3",
 		"svelte-preprocess": "^5.1.3",
