--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
 		"typescript": "^5.3.3",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@auth/prisma-adapter": "^1.2.0",
+		"@auth/sveltekit": "^0.11.0",
+		"@prisma/client": "^5.9.1"
+	}
 }
